fix vacancy scrollbar

--- a/frontend/src/static/css/main.scss
+++ b/frontend/src/static/css/main.scss
@@ -153,13 +153,34 @@ body {
   overflow: auto;
 }
 
-.vacancies__list::-webkit-scrollbar {
-  width: 13px;
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+  .vacancies__list::-webkit-scrollbar-thumb {
+    background: $color-scroll-bar;
+  }
+  .vacancies__list::-webkit-scrollbar-track {
+    background: $color-medium-background;
+  }
+  .vacancies__list::-webkit-scrollbar {
+    width: 6px;
+  }
 }
 
-.vacancies__list::-webkit-scrollbar-thumb {
-  background: $color-scroll-bar; /* Цвет фона полосы прокрутки */
-  border-radius: 10px;
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+  .vacancies__list {
+    scrollbar-color: $color-scroll-bar $color-medium-background;
+    scrollbar-width: thin;
+  }
+}
+
+/* Legacy browsers with `-ms-` prefix (Internet Explorer)*/
+@supports (-ms-ime-align: auto) {
+  .vacancies__list {
+    scrollbar-base-color: $color-scroll-bar;
+    scrollbar-track-color: $color-medium-background;
+    scrollbar-width: thin;
+  }
 }
 
 .vacancies__vacancy {
@@ -180,7 +201,7 @@ body {
 
 .vacancies__new-vacancy {
   align-self: flex-end;
-  padding: 0 20px;
+  padding: 10px 20px 0;
   display: flex;
   gap: 7px;
   align-items: center;
@@ -404,38 +425,33 @@ body {
 }
 
 .resume-info__score {
+  width: 100%;
   position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(0%);
+  top: 2px;
   font-size: 21px;
   color: $color-rating-font-darker;
-}
-
-.resume-info__score span {
-  font-size: 40px;
-  color: $color-good-rating-font;
 }
 
 .resume-info__score-input {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  width: 2.6em;
-  padding: 3px;
-  border: 1px solid #ccc;
-  color: $color-good-rating-font;
-  border-radius: 4px;
-  font-size: 32px;
-  text-align: center;
+  width: 2em;
+  border: 0px;
+  border-bottom: 1px solid $color-button;
+  color: $color-rating-font;
+  font-size: 1.5em;
+  text-align: start;
   transition: border-color 0.3s ease;
   background-color: inherit;
 }
 
 .resume-info__score-input:focus {
   outline: none;
-  border-color: #0066cc;
-  box-shadow: 0 0 3px rgba(0, 102, 204, 0.5);
+  // border-color: $color-rating-font;
+  box-shadow: 0 4px 3px -3px $color-rating-font;
+  // border: 0px;
+  // border-bottom: $color-rating-font;
 }
 
 .resume-info__photo-container {
@@ -502,3 +518,5 @@ body {
 }
 .resume-info__contacts {
 }
+
+// #endregion
